advance level- retrieve data3

--- a/app/src/main/res/layout/customlist.xml
+++ b/app/src/main/res/layout/customlist.xml
@@ -10,12 +10,14 @@
         android:id="@+id/usernameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+android:text="user"
         />
 
     <TextView
         android:id="@+id/passwordTV"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="pass"
+        />
 
 </LinearLayout>
