--- a/app/src/main/res/layout/activity_hashmap_acitivity.xml
+++ b/app/src/main/res/layout/activity_hashmap_acitivity.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.bdjobs.training.firebasetest.MainActivity">
+    tools:context="com.bdjobs.training.firebasetest.HashmapAcitivity">
+
 
     <EditText
         android:id="@+id/username"
@@ -31,11 +32,11 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/next"
+            android:id="@+id/exitBTN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:text="Next Page" />
+            android:text="Exit" />
 
         <LinearLayout
             android:layout_width="wrap_content"
