--- a/app/src/main/res/layout/activity_hashmap_acitivity.xml
+++ b/app/src/main/res/layout/activity_hashmap_acitivity.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:text="Exit" />
+            android:text="Next Page" />
 
         <LinearLayout
             android:layout_width="wrap_content"
