--- a/app/src/main/res/layout/activity_hashmap_acitivity.xml
+++ b/app/src/main/res/layout/activity_hashmap_acitivity.xml
@@ -37,6 +37,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:text="Next Page" />
+        <Button
+            android:id="@+id/secondNext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:layout_gravity="bottom"
+            android:text="Second Next Page" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -47,7 +54,7 @@
             <ListView
                 android:id="@+id/itemLV"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="200dp">
 
             </ListView>
 
