--- a/app/src/main/res/layout/activity_hashmap_acitivity.xml
+++ b/app/src/main/res/layout/activity_hashmap_acitivity.xml
@@ -36,14 +36,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:text="Next Page" />
+            android:text="HashMapListview" />
         <Button
             android:id="@+id/secondNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
             android:layout_gravity="bottom"
-            android:text="Second Next Page" />
+            android:text="only LatandLong TV" />
 
         <LinearLayout
             android:layout_width="wrap_content"
